Issue #2954044 by lolandese: Text wraps around a photoset

--- a/css/flickr.stylez.css
+++ b/css/flickr.stylez.css
@@ -18,6 +18,7 @@
 
 .flickr-photoset {
   clear: both;
+  display: table;
 }
 
 .flickr-photoset-title {
